# gtlab

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gtlab/: __init__.py  _memo.py
src/gtlab/core/: __init__.py  bayesian.py  correlated.py  extensive_form.py  normal_form.py  stochastic.py  zero_sum.py
src/gtlab/games/: __init__.py  applied.py  bayesian.py  classic.py  correlated.py  extensive_form.py  normal_form.py  stochastic.py  zero_sum.py
src/gtlab/solvers/: __init__.py  bayesian_extra.py  best_response.py  correlated.py  correlated_extra.py  dominance.py  extensive_form_extra.py  learning.py  linprog.py  nash.py  normal_form_extra.py  pareto.py  stochastic_extra.py  value_iteration.py  welfare.py  zero_sum_extra.py
src/gtlab/viz/: __init__.py  format.py  html.py  plots.py  theme.py
tests/: test_bayesian.py  test_bayesian_ported.py  test_correlated_ported.py  test_display.py  test_extensive_form_ported.py  test_games.py  test_html_correctness.py  test_normal_form_ported.py  test_perf.py  test_solvers.py  test_stochastic_ported.py  test_zero_sum_ported.py
